--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "expo": "~48.0.4",
     "expo-status-bar": "~1.4.4",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.3"
   },
@@ -18,6 +19,7 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
     "@types/react-native": "^0.71.3",
+    "tailwindcss": "^3.2.7",
     "typescript": "^4.9.4"
   },
   "private": true
