--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@sanity/client": "^5.2.2",
+    "@sanity/image-url": "^1.0.2",
     "expo": "~48.0.4",
     "expo-status-bar": "~1.4.4",
     "nativewind": "^2.0.11",
@@ -20,8 +22,9 @@
     "react-native-heroicons": "^3.2.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-svg": "^13.8.0",
-    "react-native-web": "~0.18.11"
+    "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.11",
+    "@expo/webpack-config": "^18.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
